--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Borel&display=swap');
 
-svg{
+svg {
     height: 60px;
     width: 60px;
     fill: rgb(205, 39, 94);
 }
-.digital-clock{
+
+.digital-clock {
     height: 20vh;
     width: 90vw;
     margin-bottom: 30px;
@@ -21,7 +22,8 @@ svg{
     justify-content: center;
     align-items: center;
 }
-.heading h1{
+
+.heading h1 {
     font-family: "Borel", cursive;
     font-weight: 600;
     font-style: normal;
@@ -31,7 +33,7 @@ svg{
 }
 
 * {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 168, 213);
 }
 
 body {
@@ -139,6 +141,11 @@ body {
     .digit {
         font-size: 72px;
     }
+
+    .melody img {
+        height: 150px;
+        width: 150px;
+    }
 }
 
 @media screen and (max-width: 640px) {
@@ -146,7 +153,7 @@ body {
         font-size: 48px;
     }
 
-    .heading h1{
+    .heading h1 {
         font-size: 42px;
     }
 
@@ -156,6 +163,11 @@ body {
 
     .digit {
         font-size: 64px;
+    }
+
+    .melody img {
+        height: 100px;
+        width: 100px;
     }
 }
 
@@ -171,6 +183,11 @@ body {
     .digit {
         font-size: 54px;
     }
+
+    .melody img {
+        height: 80px;
+        width: 80px;
+    }
 }
 
 @media screen and (max-width: 450px) {
@@ -178,7 +195,7 @@ body {
         font-size: 20px;
     }
 
-    .heading h1{
+    .heading h1 {
         font-size: 28px;
     }
 
@@ -188,5 +205,10 @@ body {
 
     .digit {
         font-size: 36px;
+    }
+
+    .melody img {
+        height: 75px;
+        width: 75px;
     }
 }
